Add a method to check Script settings without notifying client

Add a method in FrameFetchContext that can be used to check if
JavaScript is allowed. This method does not notify the
ContentSettingsClient when the JavaScript is blocked.
The method is used by Client hints to check if JavaScript
is allowed.

Bug: 822553
Change-Id: I775af88099c3973f85e3c7306c1debd27282a9af
Reviewed-on: https://chromium-review.googlesource.com/967565
Commit-Queue: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544109}
Former-commit-id: c211d8be5dd5da77ade1e6ff092f96478347a93f